--- a/_includes/header.html
+++ b/_includes/header.html
@@ -55,7 +55,7 @@
 <div id="main-search-wrap">
 <div class="main-search">
 <form action="/search.html" class="search-form" target="_top">
-<input aria-label="Search" autocomplete="off" class="search-input" name="q" placeholder="Search" type="search" value="">
+<input aria-label="Search" autocomplete="off" class="search-input" name="query" placeholder="Search" type="search" value="">
 <button class="search-close" type="reset" value=""></button>
 </form>
 </div>
