--- a/_includes/layout/content-section5.html
+++ b/_includes/layout/content-section5.html
@@ -1,15 +1,15 @@
 <div class="widget HTML is-visible type-grid" data-version="2" id="HTML7">
   <div class="widget-title title-wrap">
     <h3 class="title">Laptops</h3>
-    <a href="/category/laptops/" class="wt-l">View all</a>
+    <a href="/category/game/" class="wt-l">View all</a>
   </div>
 
-  {% assign laptop_posts = site.posts | where_exp: "post", "post.categories contains 'laptops'" %}
+  {% assign game_posts = site.posts | where_exp: "post", "post.categories contains 'game'" %}
 
-  {% if laptop_posts.size > 0 %}
+  {% if game_posts.size > 0 %}
   <div class="widget-content">
     <div class="content-block grid-items">
-      {% for post in laptop_posts limit:6 %}
+      {% for post in game_posts limit:6 %}
       <div class="grid-item item-{{ forloop.index0 }}">
         <a title="{{ post.title }}" class="entry-image-wrap {% if post.image %} is-image {% else %} is-video {% endif %}" href="{{ post.url }}">
           <span class="entry-thumb lazy-ify" data-image="{{ post.image | default: 'default-image.jpg' }}" 
@@ -33,6 +33,6 @@
     </div>
   </div>
   {% else %}
-  <p>No laptop posts available.</p>
+  <p>No game posts available.</p>
   {% endif %}
 </div>
