--- a/_includes/layout/content-section5.html
+++ b/_includes/layout/content-section5.html
@@ -1,6 +1,6 @@
 <div class="widget HTML is-visible type-grid" data-version="2" id="HTML7">
   <div class="widget-title title-wrap">
-    <h3 class="title">Laptops</h3>
+    <h3 class="title">Game Online Unblocked</h3>
     <a href="/category/game/" class="wt-l">View all</a>
   </div>
 
