--- a/_includes/layout/content-section5.html
+++ b/_includes/layout/content-section5.html
@@ -11,10 +11,17 @@
     <div class="content-block grid-items">
       {% for post in game_posts limit:6 %}
       <div class="grid-item item-{{ forloop.index0 }}">
-        <a title="{{ post.title }}" class="entry-image-wrap {% if post.image %} is-image {% else %} is-video {% endif %}" href="{{ post.url }}">
-          <span class="entry-thumb lazy-ify" data-image="{{ post.image | default: 'default-image.jpg' }}" 
-                style="background-image:url({{ post.image | default: 'default-image.jpg' }})">
-          </span>
+<a title="{{ post.title }}" class="entry-image-wrap {% if post.video %} is-video {% elsif post.image %} is-image {% endif %}" href="{{ post.url }}">
+{% if post.video %}
+    <span class="entry-thumb lazy-ify" data-image="{{ post.video }}" 
+    style="background-image:url({{ post.video }})"></span>
+    {% elsif post.image %}
+    <span class="entry-thumb lazy-ify" data-image="{{ post.image }}" 
+    style="background-image:url({{ post.image }})"></span>
+    {% else %}
+    <span class="entry-thumb lazy-ify" data-image="default-image.jpg" 
+    style="background-image:url(default-image.jpg)"></span>
+    {% endif %}
         </a>
         <div class="entry-header">
           <h2 class="entry-title">
