--- a/_includes/ads/footer-ads-wrap.html
+++ b/_includes/ads/footer-ads-wrap.html
@@ -1,18 +1,7 @@
 <div class="flex-center" id="footer-ads-wrap">
 <div class="footer-ads container row-x1 section" id="footer-ads" name="Footer ADS"><div class="widget HTML" data-version="2" id="HTML3">
 <div class="widget-content">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5996774720354567"
-     crossorigin="anonymous"></script>
-<!-- ads1 -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-5996774720354567"
-     data-ad-slot="2789866820"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<a class="ads-here" href="{{ '/' | relative_url }}">Responsive Advertisement</a>
 </div>
 </div></div>
 </div>
