--- a/_includes/ads/header-ads-wrap.html
+++ b/_includes/ads/header-ads-wrap.html
@@ -1,4 +1,15 @@
 <div class="flex-center" id="header-ads-wrap"><div class="header-ads container row-x1 section" id="header-ads" name="Header ADS"><div class="widget HTML" data-version="2" id="HTML1">
 <div class="widget-content">
-<a class="ads-here" href="{{ '/' | relative_url }}">Responsive Advertisement</a>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5996774720354567"
+     crossorigin="anonymous"></script>
+<!-- ads1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5996774720354567"
+     data-ad-slot="2789866820"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div></div></div></div>
