--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@ layout: compress
   <link href="{{ './css/main.css' | relative_url }}" rel="stylesheet">
   
 <meta name="google-site-verification" content="HO-tgwMOwdrsmohi8Mg03hcU9u_Pn5e5OgecplrvupE" />
+<meta name="msvalidate.01" content="EFCAA3F5935E8E24C92E53C799C352F3" />
 
   {% feed_meta %}
   {% seo %}
