--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@ layout: compress
     rel="stylesheet">
 
   <link href="{{ './css/main.css' | relative_url }}" rel="stylesheet">
-  
+<meta name="facebook-domain-verification" content="7zo6durzd41uzjv2ijbmqp5astgk5k" />
 <meta name="google-site-verification" content="HO-tgwMOwdrsmohi8Mg03hcU9u_Pn5e5OgecplrvupE" />
 <meta name="msvalidate.01" content="EFCAA3F5935E8E24C92E53C799C352F3" />
 
