--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,7 +48,7 @@ pagination:
   {% endif %}
 <div class="main section" id="main" name="Main Posts"><div class="widget Blog" data-version="2" id="Blog1">
 <div class="title-wrap bp-title"><h3 class="title">{{ category_name }}</h3><a class="wt-l" href="/posts/">View all</a></div>
-    {% if posts and posts.size &gt; 0 %}
+    {% if posts and posts.size > 0 %}
     <div class="blog-posts hfeed index-post-wrap" id="post-list">
       {% for post in paginator.posts %}
       <article class="blog-post hentry index-post post-{{ forloop.index0 }}">
@@ -68,7 +68,7 @@ pagination:
 <span class="entry-category">{{ post.categories[0] }}</span>
 <h2 class="entry-title"><a class="entry-title-link" href="{{ post.url | relative_url }}" rel="bookmark" title="{{ post.title }}">{{ post.title }}</a></h2>
 <p class="line-clamp-3">{{ post.excerpt | strip_html | truncatewords:15 }}</p>
-{% if post.auteurs and post.auteurs.size &gt; 1 %}
+{% if post.auteurs and post.auteurs.size > 1 %}
 <div>
             <strong>
               {% for auteur in post.auteurs %}
