--- a/_includes/gamesplayer.html
+++ b/_includes/gamesplayer.html
@@ -27,7 +27,7 @@
 
   <div id="controls">
     <ul>
-      <li class="dnmo weba"><a href="https://www.trendio.homes/category/game/"><span class="icon inicio"></span></a></li>
+      <li class="dnmo weba"><a href="https://www.trendio.homes/game/"><span class="icon inicio"></span></a></li>
       <li class="dnmo"><span class="icon refresh" onclick="location.reload()"></span></li>
       <li class="dnmo"><span id="fullscreen-button" class="icon fullscreen-button disabled"></span></li>
     </ul>
