--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,7 +54,7 @@
 </div>
 <div id="main-search-wrap">
 <div class="main-search">
-<form action="/search.html" class="search-form" target="_top">
+<form action="/search/" class="search-form" target="_top">
 <input aria-label="Search" autocomplete="off" class="search-input" name="query" placeholder="Search" type="search" value="">
 <button class="search-close" type="reset" value=""></button>
 </form>
