--- a/_includes/mobile-menu.html
+++ b/_includes/mobile-menu.html
@@ -1,8 +1,8 @@
 <div id="slide-menu">
 <div class="slide-menu-header">
 <div class="mobile-search">
-<form action="/search" class="search-form" role="search">
-<input autocomplete="off" class="search-input" name="q" placeholder="Search" type="search" value="">
+<form action="/search/" class="search-form" role="search">
+<input autocomplete="off" class="search-input" name="query" placeholder="Search" type="search" value="">
 <button class="search-action" type="submit" value=""></button>
 </form>
 </div>
