--- a/_includes/mobile-menu.html
+++ b/_includes/mobile-menu.html
@@ -2,7 +2,7 @@
 <div class="slide-menu-header">
 <div class="mobile-search">
 <form action="/search/" class="search-form" role="search">
-<input autocomplete="off" class="search-input" name="query" placeholder="Search" type="search" value="">
+<input autocomplete="off" id="search-box" class="search-input" name="query" placeholder="Search" type="search" value="">
 <button class="search-action" type="submit" value=""></button>
 </form>
 </div>
