--- a/_includes/ads/post1.html
+++ b/_includes/ads/post1.html
@@ -1,5 +1,15 @@
 <div id="before-ad"><div class="widget HTML" data-version="2" id="HTML4">
 <div class="widget-content">
 <a class="ads-here" href="{{ '/' | relative_url }}">Responsive Advertisement</a>
+     <script type="text/javascript">
+	atOptions = {
+		'key' : '19ffe8a403417343f09a79dbc5ede3c3',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//riskexcel.com/19ffe8a403417343f09a79dbc5ede3c3/invoke.js"></script>
 </div>
 </div></div>
